--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>jquery</artifactId>  
       <version>3.1.0</version> 
     </dependency> 
+    <dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-messaging-servicebus</artifactId>
+    		<version>7.7.0</version>
+		</dependency>
   </dependencies>  
   <build> 
     <plugins> 
